force-app/main/default/objects/Backlog_Component__c/Backlog_Component__c.object-meta.xml
<CustomObject>
    <label>Backlog Component</label>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Backlog Component</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlog Component</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>