force-app/main/default/objects/Backlog_Component__c/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <label>Backlog</label>
    <referenceTo>Backlog_Items__c</referenceTo>
    <relationshipLabel>Backlog Component</relationshipLabel>
    <relationshipName>Backlog_Component</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>