force-app/main/default/objects/Backlog_Component__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Backlog Component</relationshipLabel>
    <relationshipName>Backlog_Component</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>