force-app/main/default/objects/Backlog_Component__c/fields/Documented_As_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Documented_As_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documented As Deleted</label>
    <type>Checkbox</type>
</CustomField>