force-app/main/default/objects/Backlog_Component__c/fields/Include_Entire_Profile__c.field-meta.xml
<CustomField>
    <fullName>Include_Entire_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Entire Profile</label>
    <type>Checkbox</type>
</CustomField>