force-app/main/default/objects/Backlog_Component__c/fields/Profile_Data_1__c.field-meta.xml
<CustomField>
    <fullName>Profile_Data_1__c</fullName>
    <label>Profile Data 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>