force-app/main/default/objects/Backlog_Component__c/fields/Source_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Source_Sandbox__c</fullName>
    <label>Source Sandbox</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZCloud</fullName>
            </value>
            <value>
                <fullName>ZCloudPar</fullName>
            </value>
            <value>
                <fullName>DBupdates</fullName>
            </value>
            <value>
                <fullName>bwApex</fullName>
            </value>
            <value>
                <fullName>LightBWPar</fullName>
            </value>
            <value>
                <fullName>TEST</fullName>
            </value>
            <value>
                <fullName>Work Order</fullName>
            </value>
            <value>
                <fullName>BWandDev</fullName>
            </value>
            <value>
                <fullName>JR</fullName>
            </value>
            <value>
                <fullName>bwDev1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>