force-app/main/default/objects/Backlog_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deploy_Manually__c</columns>
    <columns>Documented_As_Deleted__c</columns>
    <columns>Include_Entire_Profile__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>